@@ -26,7 +26,7 @@ RUN $JAVA_HOME/bin/keytool -importcert -file /tmp/ilemtest.crt -alias ilemtest -
 
 ADD target/app-resource-server.jar /app/
 
-ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -Dpinpoint.agentId=$(date | md5sum | head -c 24) -jar /app/app-resource-server.jar $APP_OPTS"]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Xverify:none -Djava.security.egd=file:/dev/./urandom -Dpinpoint.agentId=$(date | md5sum | head -c 24) -jar /app/app-resource-server.jar $APP_OPTS"]
 
 HEALTHCHECK --interval=30s --timeout=30s --retries=10 CMD curl -f http://localhost:9105/management/health || exit 1
 
